--- a/carp.html
+++ b/carp.html
@@ -25,9 +25,8 @@
             <button class="which-page" onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
-            <button onclick="window.location.href = 'ux.html';">UX</button>
-            <button>Reflection</button>
-            </div>
+            <button onclick="window.location.href = 'ux.html';">Reflection</button>
+          </div>
        </ul>
 
       <div class= "section-one">
