--- a/ux.html
+++ b/ux.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
-    <title>CARP page</title>
+    <title>Reflection</title>
 </head>
 
 
@@ -17,7 +17,7 @@
         }
         </style>
 
-      <h1>USER EXPERIENCE</h1>
+      <h1>REFLECTION</h1>
 
       <ul>
         <div class="flex-container">
@@ -25,9 +25,8 @@
             <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
-            <button class="which-page" onclick="window.location.href = 'ux.html';">UX</button>
-            <button>Reflection</button>
-            </div>
+            <button class="which-page" onclick="window.location.href = 'ux.html';">Reflection</button>
+          </div>
        </ul>
        
 
