--- a/coding.html
+++ b/coding.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
-    <title>CARP page</title>
+    <title>Coding</title>
 </head>
 
 
@@ -25,8 +25,7 @@
             <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button class="which-page" onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
-            <button onclick="window.location.href = 'ux.html';">UX</button>
-            <button>Reflection</button>
+            <button onclick="window.location.href = 'ux.html';">Reflection</button>
             </div>
        </ul>
        
