--- a/coding.html
+++ b/coding.html
@@ -50,7 +50,10 @@
             <img src="flexbox index.png" alt= "flexindex">
             <p class="caption"></p> 
         </div> 
+    </div>
+    
 
+    <div class="section-three">
         <div class= "cposters">
             <img src="flexbox button.png" alt= "flexbutton">
             <p class="caption"></p> 
