--- a/coding.html
+++ b/coding.html
@@ -33,6 +33,7 @@
 
        <div class="bigcaption">
         <p> Within these worksheets we experiment with the basics of html and css. We played around with different fonts, applying colour and sizes. This allowed us to start to grasp an understanding of structure too whilst we linked our html to the css file.  I learnt how to create different classes so that I can personalize each section of the website and split it up how I want. We also learnt how top insert images onto the website, all while publishing our files to GitHub.</p>
+        <a href="https://maddy4nderson.github.io/HTML-CSS/">Pizza Page:)</a>
     </div>
 
 
@@ -70,7 +71,7 @@
  <h2 class="codingheading">WORKSHEET 4-5</h2> 
         <div class="bigcaption">
             <p>In these worksheets we experimented with flexboxes and including different bits in the website. For example, we learnt how to create buttons to different links outside and inside the website, how to attach videos and audio. Then using our knowledge of classes, we then manipulated the positioning the colours the background etc. Here, I also learnt how flexboxes create more freedom for the structure and how it creates flexible layouts that you can personalize vertically or horizontally. </p>
-            <a href="https://maddy4nderson.github.io/flexbox-rundown/worksheet4/index.html" class="bigcaption">Let's Flexbox!</a>
+            <a href="https://maddy4nderson.github.io/flexbox-rundown/worksheet4/index.html">Let's Flexbox!</a>
         </div>  
        
        <div class="section-two">
